fix: dropdown z-index

--- a/css/reskin-2/paymentHistory.css
+++ b/css/reskin-2/paymentHistory.css
@@ -333,7 +333,7 @@ body {
         padding-bottom: 16px;
       }
     }
-    
+
 #payments > br { display: none; }
 
 .form-container {
@@ -959,6 +959,7 @@ body {
           right: -1px;
           text-align: left;
           cursor: default;
+          z-index: 9999;
           background-color: var(--tc-white);
           border: 1px solid var(--black-40);
 
